onedriver (0.13.0-1) focal; urgency=low

  * The GUI has been rewritten in golang for ease of maintenance and code sharing with 
    the rest of the onedriver application.
  * onedriver can now be configured with a config file at "~/.config/onedriver/config.yml".
  * The onedriver CLI now stores its cache in the same path that the GUI expects,
    meaning that invoking the onedriver filesystem directly and via the GUI will share the
    cache as long as the mountpoint is the same.

 -- Jeff Stafford <jeff.stafford@protonmail.com>  Sat, Sep 24 16:00:00 -0400

onedriver (0.12.0-1) focal; urgency=low

  * Major internal rewrite - onedriver now talks directly to the kernel instead of using
    go-fuse/fs as an intermediary. This makes metadata operations a bit faster.
  * onedriver better handles completion of multipart uploads and does not repeatedly
    upload files on success. This significantly improves upload speed.
  * Fixes a crash when writes begin at an offset beyond maximum file length. This fixes a
    bug where running ld inside the filesystem would cause it to crash.
  * Switch to using zerolog instead of logrus for logging. Though zerolog is supposedly 
    faster, the real reason to switch is that it's much easier for me (and hopefully you)
    to read. Also, pretty colors!
  * onedriver now gives you the option to choose to authenticate via the terminal when 
    authenticating via the new --no-browser option (this is the functionality from the 
    old "headless" build).
  * Add a workaround for the TLS cert authentication issue from
    https://bugzilla.redhat.com/show_bug.cgi?id=2024296

 -- Jeff Stafford <jeff.stafford@protonmail.com>  Tue, 2 Nov 2021 19:00:00 -0400

onedriver (0.11.2-1) focal; urgency=low

  * onedriver now disallows rmdir on nonempty directories.
  * The filesystem now detects if it is offline more reliably.
 
 -- Jeff Stafford <jeff.stafford@protonmail.com>  Tue, 17 Aug 2021 00:15:00 -0400

onedriver (0.11.1-1) focal; urgency=low