@@ -2,7 +2,7 @@ Source: onedriver
 Section: utils
 Priority: optional
 Maintainer: Jeff Stafford <jeff.stafford@protonmail.com>
-Build-Depends: golang (>= 1.12), gcc, pkg-config, libwebkit2gtk-4.0-dev, git, debhelper
+Build-Depends: golang (>= 1.15), gcc, pkg-config, libwebkit2gtk-4.0-dev, git, debhelper
 Standards-Version: 4.4.1
 Homepage: https://github.com/jstaf/onedriver
 #Vcs-Browser: https://github.com/jstaf/onedriver
