@@ -14,10 +14,10 @@ override_dh_auto_clean:
 
 override_dh_auto_build:
 	# GOCACHE will be for a nonexistent user in pbuilder otherwise
-	GOCACHE=/tmp/go-cache go build -mod=vendor \
+	GOCACHE=/tmp/go-cache go build -v -mod=vendor \
 		-ldflags="-X github.com/jstaf/onedriver/cmd/common.commit=$(shell cat .commit)" \
 		./cmd/onedriver
-	GOCACHE=/tmp/go-cache go build -mod=vendor \
+	GOCACHE=/tmp/go-cache go build -v -mod=vendor \
 		-ldflags="-X github.com/jstaf/onedriver/cmd/common.commit=$(shell cat .commit)" \
 		./cmd/onedriver-launcher
 	gzip resources/onedriver.1
